[package]
name = "wavers"
version = "1.2.1"
edition = "2021"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
description = "A library for reading and writing wav files."
readme = "README.md"
homepage = "https://github.com/jmg049/wavers"
repository = "https://github.com/jmg049/wavers"
documentation = "https://docs.rs/wavers"
keywords = ["wav", "audio", "wave", "reader", "writer"]
categories = ["audio", "encoding", "decoding", "io"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
bytemuck = "1.13.1"
paste = "1.0.14"
thiserror = "1.0.48"
ndarray = { version = "0.15.6", optional = true }
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
num-traits = "0.2.16"
colored = {version = "2.1.0", optional = true}

[dev-dependencies]
approx_eq = "0.1.8"
criterion = "0.5.1"
rand = "0.8.5"
hound = "3.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true


[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "benches"
harness = false

## add features
[features]
ndarray = ["dep:ndarray"]
pyo3 = ["dep:pyo3"]
colored = ["dep:colored"]
