[package]
name = "wavers"
version = "1.5.1"
edition = "2021"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
description = "A library for reading and writing wav files."
readme = "README.md"
homepage = "https://github.com/jmg049/wavers"
repository = "https://github.com/jmg049/wavers"
documentation = "https://docs.rs/wavers"
keywords = ["wav", "audio", "wave", "reader", "writer"]
categories = ["encoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
bytemuck = "1.13.1"
paste = "1.0.14"
thiserror = "1.0.48"
num-traits = "0.2.16"
ndarray = { version = "0.16.1", optional = true }
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
numpy = { version = "0.21.0", optional = true }
colored = { version = "2.1.0", optional = true }
rubato = { version = "0.15.0", optional = true }
i24 = { version = "1.0.1", default-features = false }
log = { version = "0.4.22", optional = true }


[dev-dependencies]
approx_eq = "0.1.8"
criterion = "0.5.1"
rand = "0.8.5"
hound = "3.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true


[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "benches"
harness = false

## add features
[features]
default = []
ndarray = ["dep:ndarray"]
pyo3 = ["dep:pyo3", "dep:numpy", "i24/pyo3"]
colored = ["dep:colored"]
logging = ["dep:log"]
resampling = ["dep:rubato"]
